--- a/M:tG Life/Base.lproj/Main.storyboard
+++ b/M:tG Life/Base.lproj/Main.storyboard
@@ -1,25 +1,105 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="zkM-Fx-tZR">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Decks-->
+        <scene sceneID="Tfb-Ax-9AH">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="ftA-Vg-FfX" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="JyO-RD-Y4n"/>
+                        <viewControllerLayoutGuide type="bottom" id="k54-ni-SsL"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" id="Rww-hv-HIP">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Decks" id="amO-Th-hW4"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lbI-uc-XO3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1402" y="908"/>
+        </scene>
+        <!--Prices-->
+        <scene sceneID="NxM-MO-OGG">
+            <objects>
+                <viewController id="Zx5-EV-noc" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="wt7-hZ-Fa2"/>
+                        <viewControllerLayoutGuide type="bottom" id="7L4-XL-SLC"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="4NV-Wh-We9">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Prices" id="ehi-YH-KaT"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BRP-q4-Mzy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1402" y="1563"/>
+        </scene>
+        <!--Counter-->
+        <scene sceneID="IaO-tX-eTM">
+            <objects>
+                <viewController id="bVY-Hr-oAV" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="L22-gC-Bn9"/>
+                        <viewControllerLayoutGuide type="bottom" id="weX-ug-rXy"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="sQZ-Jh-mwE">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Counter" id="6ZB-jk-dKj"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="u1d-ac-JVP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1402" y="2221"/>
+        </scene>
+        <!--Collection-->
+        <scene sceneID="teh-ov-eKq">
+            <objects>
+                <viewController id="TvY-XX-C30" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Mzj-0g-fLR"/>
+                        <viewControllerLayoutGuide type="bottom" id="IdU-1S-UVE"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="kqS-uP-L0G">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Collection" id="ZK6-aL-MTc"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Zkz-hN-B2C" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1402" y="247"/>
+        </scene>
+        <!--Main Tab Bar Controller-->
+        <scene sceneID="EL7-9j-IEo">
+            <objects>
+                <tabBarController id="zkM-Fx-tZR" customClass="ZPLMainTabBarController" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="61J-85-fOQ">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="TvY-XX-C30" kind="relationship" relationship="viewControllers" id="fvi-lu-QAr"/>
+                        <segue destination="ftA-Vg-FfX" kind="relationship" relationship="viewControllers" id="z6W-mp-fih"/>
+                        <segue destination="Zx5-EV-noc" kind="relationship" relationship="viewControllers" id="VfT-cw-NiX"/>
+                        <segue destination="bVY-Hr-oAV" kind="relationship" relationship="viewControllers" id="FZv-6R-sxe"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Xbo-sN-YCB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="592" y="1272"/>
         </scene>
     </scenes>
 </document>
